# rust_server

./: .env  Cargo.toml  cargo.toml
HTTPServer/: Cargo.toml
HTTPServer/http/: Cargo.toml
HTTPServer/http/src/: httprequest.rs  httpresponse.rs  lib.rs
HTTPServer/httpserver/: Cargo.toml
HTTPServer/httpserver/src/: handler.rs  server.rs
HTTPServer/tcpclient/src/: main.rs
HTTPServer/tcpserver/src/: main.rs
WASM-Clinet/: Cargo.toml
WebApp/: .env  Cargo.toml
WebApp/src/: error.rs  handler.rs  main.rs  mod.rs  model.rs  router.rs
WebApp/static/: author.html  register.html
WebApp/static/js/: bootstrap.min.js
WebService/: Cargo.toml  handler.rs
WebService/src/: main.rs  routers.rs  state.rs
WebService/src/db_access/: author.rs
WebService/src/handlers/: book.rs  general.rs  mod.rs
WebService/src/models/: book.rs
WorkSpace/src/: error.rs
WorkSpace/src/handlers/: author.rs
WorkSpace/src/models/: author.rs
db/: Cargo.toml  db.sql
db/src/: main.rs
src/: routers.rs
src/db_access/: book.rs
src/models/: author.rs
wasm-client/: Cargo.toml  LICENSE_MIT
