[package]
name = "WorkSpace"
version = "0.1.0"
edition = "2021"
default-run = "service"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.6"
actix-rt = "2.9"
serde = { version = "1.0.132", features = ["derive"] }
chrono = { version = "0.4.19", features = ["serde"] }
sqlx = { version = "0.6.2", features = ["postgres", "runtime-tokio-rustls", "macros", "chrono"] }
dotenv = "0.15.0"

[[bin]]
name = "service"

